Fix font-size, align

--- a/src/assets/less/components/periods-dropdown.less
+++ b/src/assets/less/components/periods-dropdown.less
@@ -115,10 +115,11 @@
 
 				&_item {
 					height: 40px;
+					font-size: 14px;
 
 					>a {
 						display: inline-block;
-						text-align: start;
+						text-align: end;
 						height: 100%;
 						padding: 10px;
 						color: #111a2c;
