--- a/src/assets/less/components/version-dropdown.less
+++ b/src/assets/less/components/version-dropdown.less
@@ -39,7 +39,7 @@
 		row-gap: 16px;
 		font-size: 15px;
 		max-height: 282px;
-		padding: 8px;
+		padding: 8px 0 0 8px;
 		background: #fff;
 		border: 1px solid #dfe3e7;
 		box-shadow: 0 4px 4px rgba(23, 35, 59, .06), 0 0 1px 1px rgba(23, 35, 59, .11), 0 10px 22px -2px rgba(23, 35, 59, .08);
@@ -58,6 +58,7 @@
 
 		&_filter {
 			position: relative;
+			padding-right: 8px;
 
 			> img {
 				position: absolute;
@@ -92,6 +93,7 @@
 
 			&_item {
 				height: 40px;
+				font-size: 14px;
 
 				>a {
 					display: inline-block;
